--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,5 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': true
   %body
     -# = render partial: 'layouts/flash'
+    = render 'layouts/notifications'
     = yield
