--- a/app/assets/stylesheets/_chats.scss
+++ b/app/assets/stylesheets/_chats.scss
@@ -3,7 +3,7 @@
   width: 300px;
   background-color: #2f3e51;
   float: left;
-  
+
   &__name {
     height: calc(40px + 28px + 28px);
     font-size: 16px;
@@ -13,6 +13,7 @@
     line-height: calc(40px + 28px + 28px);
     padding: 0 20px;
     &--icon{
+      color: #ffffff;
       padding-left: 5px;
       float: right;
       line-height: calc(40px + 28px + 28px);
@@ -25,6 +26,9 @@
     padding-left: 20px;
     &__group {
       padding-bottom: 40px;
+      a {
+        text-decoration: none;
+      }
       &__name {
         font-size: 15px;
         font-weight: bold;
@@ -46,6 +50,8 @@
   width: calc(100vw - 300px);
   background-color: #fafafa;
   float: right;
+  position: relative;
+
 
   &__group {
     background-color: #ffffff;
