--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
 @import "reset";
 @import "font-awesome";
 @import "chats";
+@import "user";
+@import "config/colors";
+@import "modules/flash";
+@import "modules/group"
