--- a/app/views/chats/index.html.haml
+++ b/app/views/chats/index.html.haml
@@ -1,11 +1,4 @@
-.user
-  .user__name
-    test-app
-    = fa_icon 'edit', class: "user__name--icon"
-    = fa_icon 'cog', class: "user__name--icon"
-  .user__groups
-    = render partial: "user", locals: {name: "test-sample", chat: "さようなら"}
-    = render partial: "user", locals: {name: "example", chat: "まだメッセージがありません"}
+= render partial: "side_bar"
 
 .chat
   .chat__group
