--- a/app/assets/stylesheets/_chats.scss
+++ b/app/assets/stylesheets/_chats.scss
@@ -158,7 +158,7 @@
               bottom: calc((20px + 50px) / 2);
               right: calc(40px + 73.8px + 15px + 10px);
             }
-            #upload-icon{
+            &__upload{
               display: none;
             }
           }
