Asynchronous message send

--- a/app/assets/stylesheets/_chats.scss
+++ b/app/assets/stylesheets/_chats.scss
@@ -4,6 +4,7 @@
   background-color: #2f3e51;
   float: left;
 
+
   &__name {
     height: calc(40px + 28px + 28px);
     font-size: 16px;
@@ -24,6 +25,8 @@
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
+    overflow: scroll;
+    height: calc(100vh - 40px - 28px - 28px - 28px);
     &__group {
       padding-bottom: 40px;
       a {
@@ -91,6 +94,8 @@
     padding-top: 46px;
     padding-left: 40px;
     padding-right: 40px;
+    height: calc(100vh - 40px - 28px - 28px - 50px - 40px - 50px);
+    overflow: scroll;
     &__content{
       padding-bottom: 40px;
       &__info{
