--- a/app/assets/stylesheets/_chats.scss
+++ b/app/assets/stylesheets/_chats.scss
@@ -71,6 +71,10 @@
       font-weight: bold;
       border: solid 1px #38AEF0;
       color: #38AEF0;
+      .edit_link{
+        text-decoration: none;
+        color: #38AEF0;
+      }
     }
     &__info{
       &__name {
