--- a/app/views/chats/_chat.html.haml
+++ b/app/views/chats/_chat.html.haml
@@ -1,4 +1,4 @@
-.chat__main__content
+.chat__main__content{"data-chat-id": "#{chat.id}"}
   .chat__main__content__info
     %span.chat__main__content__info__username
       = chat.user.name
