edit group member display

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -28,10 +28,14 @@
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
       #user-member
-        .chat-group-user
-          %input{name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}
-          %p.chat-group-user__name
-            = current_user.name
+        - @group.users.each do |user|
+          .chat-group-user
+            %input{name: "group[user_ids][]", type: "hidden", value: "#{user.id}"}
+            %p.chat-group-user__name
+              = user.name
+            - if user.id != 1
+              .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn{"data-user-id": "#{user.id}", "data-user-name": "#{user.name}"}
+                削除
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
